@@ -41,6 +41,7 @@ since 1.2 relase ( 'til 1.3 beta 1 :-)
   + High resolution printing (600dpi)
   + Improved WYSIWYG
   + Zoom support on printout
+- New direction mode when pressing Enter: you can jump now to the first cell of the next row
 
 
 New functions:
